# MIPxHPLUS

./: .clang-format  .gitignore  Changelog.md  Makefile  Readme.md  TODO  TodoList.md  Todolist.md  build.sh
code/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  hplus_instance.cpp  hplus_instance.hpp  info.cpp  main.cpp  utils.hpp
code/cpxout/lp/: UNNAMED RUN.lp
code/cut_separators/: callbacks.hpp  cand_callback.cpp  cand_callback.hpp  cand_landmark.cpp  cand_sec.cpp  relax_callback.cpp  relax_callback.hpp  relax_landmark.cpp  relax_sec.cpp
code/domain/: execution.hpp  hplus_algs.cpp  hplus_algs.hpp  instance.hpp  statistics.hpp
code/exact/: dynamic.cpp  dynamic.hpp  imai.cpp  imai.hpp  lm.cpp  lm.hpp  rankooh.cpp  rankooh.hpp  rankooh_dynamic.cpp  rankooh_dynamic.hpp  tl.cpp  tl.hpp  ve.cpp  ve.hpp
code/headers/: hplus_instance.hpp  logging.hpp  utils.hpp
code/heuristics/: greedycost.cpp  greedycost.hpp  greedycxe.cpp  greedycxe.hpp  hmax_hadd.cpp  hmax_hadd.hpp
code/include/: algorithms.hpp  dynamic_model.hpp  dynamic_model_large.hpp  dynamic_model_small.hpp  hplus_instance.hpp  imai_model.hpp  logging.hpp  rankooh_model.hpp  utils.hpp
code/preprocessing/: dominated_actions.cpp  first_adders.cpp  landmarks.cpp  lmcut.cpp  optimization_helpers.cpp  preprocessing.hpp  relevance_analysis.cpp
code/search_exact/: base_model.cpp  cutloop.cpp  cuts.cpp  exact.hpp  tl.cpp  ve.cpp
code/search_heuristics/: greedy.cpp  greedychoice_cost.cpp  greedychoice_cxe.cpp  greedychoice_hmax_hadd.cpp  heuristic.hpp
code/src/: algorithms.cpp  dynamic_model.cpp  dynamic_model_large.cpp  dynamic_model_small.cpp  hplus_instance.cpp  imai_model.cpp  logging.cpp  main.cpp  rankooh_model.cpp  utils.cpp
code/test/: comparison.py  comparison_plots.py  configure_fast_run.py  const_vs_cuts.py  create.py  fast_create.py  results.py  run.py  show_times.py
code/test/code/: check_costs.py  create_jobs.py  results_jobs.py  run_jobs.py
code/testing/: create_jobs.py  getstats.py  slurm_job_TEST_imai.sh  slurm_job_TEST_rankooh.sh  tester.py
code/testing/code/: check_correctness.py  clear_logs.py  comparator.py  create_jobs.py  results_jobs.py  run_jobs.py  tmp  utils.py
code/utils/: algorithms.hpp  argparser.hpp  utils.hpp
fast_downward_baseline/: agricola-opt18-strips-p01  agricola-opt18-strips-p02  agricola-opt18-strips-p03  agricola-opt18-strips-p04  agricola-opt18-strips-p05  agricola-opt18-strips-p06  agricola-opt18-strips-p07  agricola-opt18-strips-p08  agricola-opt18-strips-p09  agricola-opt18-strips-p10  agricola-opt18-strips-p11  agricola-opt18-strips-p13  agricola-opt18-strips-p14  agricola-opt18-strips-p15  agricola-opt18-strips-p16  agricola-opt18-strips-p17  agricola-opt18-strips-p18  agricola-opt18-strips-p19  agricola-opt18-strips-p20  airport-p01-airport1-p1  airport-p02-airport1-p1  airport-p03-airport1-p2  airport-p04-airport2-p1  airport-p05-airport2-p1  airport-p06-airport2-p2  airport-p07-airport2-p2  airport-p08-airport2-p3  airport-p09-airport2-p4  airport-p10-airport3-p1  airport-p11-airport3-p1  airport-p12-airport3-p2  airport-p13-airport3-p2  airport-p14-airport3-p3  airport-p15-airport3-p3  airport-p16-airport3-p4  airport-p17-airport3-p5  airport-p19-airport3-p6  airport-p20-airport3-p7  airport-p21-airport4halfMUC-p2  airport-p22-airport4halfMUC-p3  (+1363 more)
results/: best_known.csv
thesis/: bibl.bib  main.tex
thesis/chapters/: 001introduction.tex  002sota.tex  003mipstart.tex  004newmodel.tex  006empiricalresults.tex  introduction.tex
